# py-overload

./: .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  HowTo.md  Improvements.md  LICENSE.md  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: close-external-prs.yml  python-app.yml  python-publish.yml  python-tox.yml
docs/: CHANGELOG.md  class_level.md  defaults.md  django.md  index.md  install.md  license.md  module_level.md  multi_init.md  requirements.md  requirements.txt
override/: __init__.py  class_tools.py
pyoverload/: __init__.py  class_tools.py
src/strongtyping_pyoverload/: __init__.py  class_tools.py  exception.py  func_info.py
src/strongtyping_pyoverload/skills/pyoverload/: SKILL.md
strongtyping_pyoverload/: __init__.py  class_tools.py
tests/: __init__.py  module_based_test_file.py  test_ai_metadata.py  test_annotated_support.py  test_edge_cases.py  test_namespace_inheritance.py  test_override.py  test_performance_optimization.py  test_pydantic_integration.py
tests/sub_tests/: nested_module.py
