[project]
name = "strongtyping-pyoverload"
version = "0.4.4.post3"
authors = [
    { name = "FelixTheC", email = "fberndt87@gmail.com" },
]
description = "Runtime method overload decorator to simulate C/C++ behavior of having multiple functions with the same name but different parameters."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
]
license = { text = "MIT License" }
dependencies = [
    "strongtyping>=3.11.4"
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]

[project.urls]
Homepage = "https://github.com/FelixTheC/py-overload"
Repository = "https://github.com/FelixTheC/py-overload"
Documentation = "https://strongtyping-pyoverload.readthedocs.io/en/latest/"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# --- TOOL CONFIGS ---
[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src"]
exclude = ["tests"]

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["strongtyping_pyoverload", ]
include-package-data = true

[tool.setuptools.package-data]
"strongtyping_pyoverload" = ["py.typed", "skills/**/*"]
