[project]
name = "strongtyping-pyoverload"
version = "1.0.2"
authors = [
    { name = "FelixTheC", email = "fberndt87@gmail.com" },
]
description = "Runtime method overload decorator to simulate C/C++ behavior of having multiple functions with the same name but different parameters."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "CC-BY-ND-4.0" }
dependencies = [
    "strongtyping>=3.13.10",
]

[dependency-groups]
dev = [
    "pydantic==2.13.4",
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "ruff==0.15.19",
]

[project.urls]
Homepage = "https://github.com/FelixTheC/py-overload"
Repository = "https://github.com/FelixTheC/py-overload"
Documentation = "https://strongtyping-pyoverload.readthedocs.io/en/latest/"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# --- TOOL CONFIGS ---
[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src"]
exclude = ["tests"]

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["strongtyping_pyoverload", ]
include-package-data = true

[tool.setuptools.package-data]
"strongtyping_pyoverload" = ["py.typed", "skills/**/*"]
